FIX: Keep the clock visible
- Keep the clock at the bottom of the page when scrolling

--- a/src/code/css/data-display.css
+++ b/src/code/css/data-display.css
@@ -14,6 +14,7 @@
 	width: 100%;
 	height: 81svh;
 	border-radius: 2vh 0 0 2vh;
+	z-index: 3;
 
 	margin-top: 2svh;
 
