--- a/src/code/css/schematics.css
+++ b/src/code/css/schematics.css
@@ -71,6 +71,7 @@
 #input-container {
 	position: absolute;
 	margin-top: var(--element-margin-top);
+	z-index: 13;
 }
 
 .input-element{
@@ -138,6 +139,7 @@
 #output-container {
 	position: absolute;
 	margin-top: var(--element-margin-top);
+	z-index: 1;
 }
 
 .output-element{
@@ -203,6 +205,7 @@
 #lut-container {
 	position: absolute;
 	margin-top: var(--element-margin-top);
+	z-index: 1;
 }
 
 .lut-element{
@@ -301,6 +304,7 @@
 #ff-container {
 	position: absolute;
 	margin-top: var(--element-margin-top);
+	z-index: 1;
 }
 
 .ff-element{
@@ -390,10 +394,20 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: -12000;
 }
 
 .line.used{
 	background-color: var(--connection-used);
 	position: absolute;
+}
+
+
+#clock-back{
+	position: fixed;
+	width: 100vw;
+	height: 18vh;
+	top: 82vh;
+	left: 0;
+	z-index: 1;
+	background: linear-gradient(to top, rgb(from var(--tertiary) r g b / 1), rgb(from var(--primary) r g b / .1));
 }
